--- a/neo4j-community-2.2.0/conf/neo4j-server.properties
+++ b/neo4j-community-2.2.0/conf/neo4j-server.properties
@@ -11,7 +11,7 @@
 
 # location of the database directory
 # org.neo4j.server.database.location=data/graph.db
-org.neo4j.server.database.location=/Users/fujun/GitHub/TwitterQA/neo4j-community-2.2.0/ir
+org.neo4j.server.database.location=/home/chanllen/git/TwitterQA/ir
 
 # Low-level graph engine tuning file
 org.neo4j.server.db.tuning.properties=conf/neo4j.properties
